--- a/student-homepage.html
+++ b/student-homepage.html
@@ -2,51 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Responsive Sidebar with Offcanvas</title>
+  <title>Team Builder</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
   <style>
     /* Custom styles */
-    body {
-      overflow-x: hidden;
-    }
-    .sidebar {
-      min-width: 200px;
-      max-width: 200px;
-      height: 100vh;
-      position: fixed;
-      top: 56px; /* Height of navbar */
-      left: 0;
-      background-color: #d5e6db;
-      color: #0e1a10;
-    }
-    .sidebar .nav-link {
-      color: #23301e;
-    }
-    .sidebar .nav-link.active {
-      background-color: #495057;
-    }
-    @media (max-width: 992px) {
-      /* Hide the sidebar by default on smaller screens */
-      .sidebar {
-        display: none;
-      }
-    }
-    .content {
-      margin-top: 56px; /* Height of navbar */
-      padding: 20px;
-    }
+ 
   </style>
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-light bg-white fixed-top shadow-sm">
     <div class="container-fluid">
       <!-- Offcanvas Toggle Button -->
       <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand ms-2" href="#">My Website</a>
+      <a class="navbar-brand ms-2" href="#">Team Builder</a>
     </div>
   </nav>
 
@@ -71,7 +44,7 @@
       </nav>
 
       <!-- Offcanvas Sidebar for Small Screens -->
-      <div class="offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
+      <div class="offcanvas offcanvas-start bg-light" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel"></div>
         <div class="offcanvas-header">
           <h5 class="offcanvas-title text-white" id="offcanvasSidebarLabel">Menu</h5>
           <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -79,12 +52,12 @@
         <div class="offcanvas-body">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active text-white" href="#">
+              <a class="nav-link active text-dark" href="#">
                 Home
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">
+                <a class="nav-link text-dark" href="#"></a>
                 Team Proposals
               </a>
             </li>
@@ -93,9 +66,9 @@
       </div>
 
       <!-- Main Content -->
-      <main class="col-lg-10 ms-auto content">
-        <h1>Welcome to My Website</h1>
-        <p>This is the main content area. Resize the browser window to see the sidebar collapse into an offcanvas menu.</p>
+      <main class="col-lg-10 ms-sm-auto px-md-4 content">
+        <h1></h1>
+        <p></p>
       </main>
     </div>
   </div>
