Refactor offcanvas sidebar styles and structure for improved accessibility and consistency

--- a/student-homepage.html
+++ b/student-homepage.html
@@ -44,22 +44,21 @@
       </nav>
 
       <!-- Offcanvas Sidebar for Small Screens -->
-      <div class="offcanvas offcanvas-start bg-light" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel"></div>
+      <div class="offcanvas offcanvas-start bg-light" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title text-white" id="offcanvasSidebarLabel">Menu</h5>
-          <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <h5 class="offcanvas-title text-dark" id="offcanvasSidebarLabel">Menu</h5>
+          <button type="button" class="btn-close btn-close-dark text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active text-dark" href="#">
+              
+              <li class="nav-item ">
+              <a class="nav-link active text-dark " href="#">
                 Home
               </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-dark" href="#"></a>
-                Team Proposals
-              </a>
+                <a class="nav-link text-dark" href="#">Team Proposals</a>
             </li>
           </ul>
         </div>
