--- a/student-homepage.html
+++ b/student-homepage.html
@@ -5,7 +5,7 @@
   <title>Team Builder</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="styles.css" rel="stylesheet">
+  <link href="homeStyles.css" rel="stylesheet">
   <style>
     /* Custom styles */
  
@@ -68,6 +68,21 @@
       <main class="col-lg-10 ms-sm-auto px-md-4 content">
         <h1></h1>
         <p></p>
+      <div class="d-flex align-items-center mb-4">
+        <img src="https://via.placeholder.co</div>m/100" class="rounded-circle me-3" alt="Profile Picture">
+        <div>
+          <h2 class="mb-1"><strong>John Doe</strong></h2>
+          <p class="mb-1">WhatsApp: +1234567890</p>
+          <p class="mb-1">Major: Computer Science</p>
+          <p class="mb-0">A brief description about John Doe. He is a dedicated student with a passion for software development and teamwork.</p>
+        </div>
+      </div>
+
+      
+      <div class="d-flex justify-content-center mt-4">
+        <button class="btn btn-outline-success btn-lg rounded-pill shadow" style="width: 30rem; height: 3.5rem; margin-top: 10%;">Create a team</button>
+      </div>
+      
       </main>
     </div>
   </div>
@@ -75,4 +90,4 @@
   <!-- Bootstrap JS Bundle (includes Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+</htm</div>l>
