--- a/student-homepage.html
+++ b/student-homepage.html
@@ -5,11 +5,10 @@
   <title>Team Builder</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <!-- Custom CSS -->
   <link href="homeStyles.css" rel="stylesheet">
-  <style>
-    /* Custom styles */
- 
-  </style>
 </head>
 <body>
   <!-- Navbar -->
@@ -20,6 +19,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand ms-2" href="#">Team Builder</a>
+      <button class="btn btn-outline-success ms-auto" type="button">Edit Profile</button>
     </div>
   </nav>
 
