--- a/TeamFormationPage.html
+++ b/TeamFormationPage.html
@@ -10,6 +10,7 @@
     <meta name="theme-color" content="#000000">
     <meta name="description" content="Web site created using create-react-app">
     <link rel="apple-touch-icon" href="http://localhost:3000/logo192.png">
+    <!--Style Sheet-->
     <link href="TeamFormation.css" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
