Replace placeholder images with SVG icons in student homepage

--- a/student-homepage-team.html
+++ b/student-homepage-team.html
@@ -61,7 +61,7 @@
     <!-- Main Content -->
     <main class="px-md-4 content">
         <div class="d-flex align-items-center mb-4">
-            <img src="https://via.placeholder.com/100" class="rounded-circle me-3" alt="Profile Picture">
+            <img src="account_circle.svg" class="rounded-circle me-3" alt="Profile Picture">
             <div>
                 <h2 class="mb-1"><strong>John Doe</strong></h2>
                 <p class="mb-1">WhatsApp: +1234567890</p>
@@ -78,7 +78,7 @@
             <div class="card-body">
                 <!-- Team Member 1 -->
                 <div class="d-flex align-items-center mb-3">
-                    <img src="https://via.placeholder.com/100" class="rounded-circle me-3" alt="Member Picture">
+                    <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
                     <div>
                         <h5 class="mb-1">Jane Doe</h5>
                         <p class="mb-1">Major: Information Technology</p>
@@ -97,7 +97,7 @@
                 <h4>Pending Requests</h4>
             </div>
             <div class="card-body"> <!-- Pending Request 1 -->
-                <div class="d-flex align-items-center mb-3"> <img src="https://via.placeholder.com/100"
+                <div class="d-flex align-items-center mb-3"> <img src="person.svg"
                         class="rounded-circle me-3" alt="Member Picture">
                     <div>
                         <h5 class="mb-1">John Smith</h5>
