--- a/student-homepage.html
+++ b/student-homepage.html
@@ -66,7 +66,7 @@
         <!-- Main Content -->
         <main class="px-md-4 content">
           <div class="d-flex align-items-center mb-4">
-            <img src="https://via.placeholder.com/100" class="rounded-circle me-3" alt="Profile Picture">
+            <img src="account_circle.svg" class="rounded-circle me-3" alt="Profile Picture">
             <div>
           <h2 class="mb-1"><strong>John Doe</strong></h2>
           <p class="mb-1">WhatsApp: +1234567890</p>
