--- a/admin-homepage.html
+++ b/admin-homepage.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="admin-homepage.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <title>Admin Homepage</title>
 </head>
 
@@ -35,7 +36,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                Team Proposals
+                                Teams
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                Team schemes
                             </a>
                         </li>
                     </ul>
@@ -57,7 +63,10 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Team Proposals</a>
+                            <a class="nav-link text-dark" href="#">Teams</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Team schemes</a>
                         </li>
                     </ul>
                 </div>
@@ -65,28 +74,68 @@
             <!-- Main Content -->
             <main class="col-lg-10 ms-sm-auto px-md-4 content">
                 <h1>Admin Dashboard</h1>
-                <p>Welcome to the admin dashboard. Here you can manage teams and proposals.</p>
                 <div class="d-flex align-items-center mb-4">
                     <img src="https://via.placeholder.com/100" class="rounded-circle me-3" alt="Profile Picture">
                     <div>
                         <h2 class="mb-1"><strong>John Doe</strong></h2>
-                        <p class="mb-1">WhatsApp: +1234567890</p>
-                        <p class="mb-1">Major: Computer Science</p>
-                        <p class="mb-0">A brief description about John Doe. He is a dedicated student with a passion for
-                            software development and teamwork.</p>
                     </div>
                 </div>
-
-                <div class="d-flex justify-content-center mt-4">
-                    <button class="btn btn-outline-success btn-lg rounded-pill shadow"
-                        style="width: 30rem; height: 3.5rem; margin-top: 10%;" type="button">Create a team</button>
-
+                <div class="card-container">
+                    <!-- User Card -->
+                    <div class="card user-card me-3">
+                        <div class="card-header">
+                            <h3>Moderators</h3>
+                        </div>
+                        <div class="card-body">
+                            <div class="user-item">
+                                <div class="d-flex align-items-center">
+                                    <img src="https://via.placeholder.com/40" alt="User 1">
+                                    <span>User 1</span>
+                                </div>
+                                <button class="btn btn-danger btn-sm" aria-label="Delete Moderator">
+                                    <i class="bi bi-trash"></i>
+                                </button>
+                            </div>
+                            <div class="user-item">
+                                <div class="d-flex align-items-center">
+                                    <img src="https://via.placeholder.com/40" alt="User 2">
+                                    <span>User 2</span>
+                                </div>
+                                <button class="btn btn-danger btn-sm" aria-label="Delete Moderator">
+                                    <i class="bi bi-trash"></i>
+                                </button>
+                            </div>
+                            <!-- Add more users as needed -->
+                        </div>
+                    </div>
+                    <!-- Add User Card -->
+                    <div class="card">
+                        <div class="card-header">
+                            <h3>Add Moderator</h3>
+                        </div>
+                        <div class="card-body">
+                            <form id="addUserForm">
+                                <div class="form-group mb-3">
+                                    <label for="username">Username</label>
+                                    <input type="text" class="form-control" id="username" placeholder="Enter username">
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label for="password">Password</label>
+                                    <input type="password" class="form-control" id="password"
+                                        placeholder="Enter password">
+                                    <!-- Password validation help text will be added here by JavaScript -->
+                                </div>
+                                <button type="submit" class="btn btn-success w-100">Add</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
     </div>
     <!-- Bootstrap JS Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="admin-homepage.js"></script>
 </body>
 
 </html>
