--- a/admin-homepage.html
+++ b/admin-homepage.html
@@ -9,6 +9,33 @@
     <link href="admin-homepage.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <title>Admin Homepage</title>
+    <style>
+        .card-container {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+        }
+
+        .user-card {
+            max-height: 300px;
+            overflow-y: auto;
+        }
+
+        .user-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .user-item img {
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            margin-right: 10px;
+        }
+    </style>
 </head>
 
 <body>
@@ -114,16 +141,17 @@
                             <h3>Add Moderator</h3>
                         </div>
                         <div class="card-body">
-                            <form id="addUserForm">
+                            <form id="addUserForm" novalidate>
                                 <div class="form-group mb-3">
                                     <label for="username">Username</label>
-                                    <input type="text" class="form-control" id="username" placeholder="Enter username">
+                                    <input type="text" class="form-control" id="username" placeholder="Enter username"
+                                        required>
+                                    <div class="invalid-feedback">Please enter a username.</div>
                                 </div>
                                 <div class="form-group mb-3">
                                     <label for="password">Password</label>
                                     <input type="password" class="form-control" id="password"
-                                        placeholder="Enter password">
-                                    <!-- Password validation help text will be added here by JavaScript -->
+                                        placeholder="Enter password" required>
                                 </div>
                                 <button type="submit" class="btn btn-success w-100">Add</button>
                             </form>
