complete the deletion functionality of moderator in admin-homepage

--- a/admin-homepage.html
+++ b/admin-homepage.html
@@ -114,7 +114,7 @@
                             <h3>Moderators</h3>
                         </div>
                         <div class="card-body">
-                            <div class="user-item">
+                            <!-- <div class="user-item">
                                 <div class="d-flex align-items-center">
                                     <img src="https://via.placeholder.com/40" alt="User 1">
                                     <span>User 1</span>
@@ -132,7 +132,7 @@
                                     <i class="bi bi-trash"></i>
                                 </button>
                             </div>
-                            <!-- Add more users as needed -->
+                            Add more users as needed -->
                         </div>
                     </div>
                     <!-- Add User Card -->
