--- a/student-homepage-team.html
+++ b/student-homepage-team.html
@@ -84,26 +84,27 @@
                         <p class="mb-1">Major: Information Technology</p>
                     </div>
                     <div class="ms-auto d-flex flex-wrap gap-2"></div>
-                        <button class="btn btn-outline-success btn-sm btn-md-normal me-2"><i class="fab fa-whatsapp"></i></button>
-                        <button class="btn btn-outline-danger btn-sm btn-md-normal"><i class="fas fa-trash"></i></button>
-                    </div>
+                    <button class="btn btn-outline-success btn-sm btn-md-normal me-2"><i
+                            class="fab fa-whatsapp"></i></button>
+                    <button class="btn btn-outline-danger btn-sm btn-md-normal"><i class="fas fa-trash"></i></button>
                 </div>
-                <!-- Add more team members similarly -->
             </div>
+            <!-- Add more team members similarly -->
         </div>
+        
 
         <div class="card mb-4">
             <div class="card-header">
                 <h4>Pending Requests</h4>
             </div>
             <div class="card-body"> <!-- Pending Request 1 -->
-                <div class="d-flex align-items-center mb-3"> <img src="person.svg"
-                        class="rounded-circle me-3" alt="Member Picture">
+                <div class="d-flex align-items-center mb-3">
+                    <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
                     <div>
                         <h5 class="mb-1">John Smith</h5>
                         <p class="mb-1">Major: Electrical Engineering</p>
                     </div>
-                    <div class="ms-auto d-flex flex-wrap gap-2"> 
+                    <div class="ms-auto d-flex flex-wrap gap-2">
                         <button class="btn btn-outline-success btn-sm btn-md-normal me-md-2">
                             <i class="fab fa-whatsapp"></i>
                         </button>
@@ -112,17 +113,38 @@
                         </button>
                         <button class="btn btn-outline-danger btn-sm btn-md-normal">
                             <i class="fas fa-trash"></i>
-                        </button> 
+                        </button>
                     </div>
                 </div> <!-- Add more pending requests similarly -->
             </div>
         </div> <!-- Delete Team Button -->
-        <div class="d-flex justify-content-center"> <button class="btn btn-outline-danger">Delete Team</button> </div>
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-outline-danger">Delete Team</button>
+        </div>
+
+        <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content bg-white">
+                    <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body text-center">
+                        <img src="person.svg" class="rounded-circle mb-3" alt="Profile Picture">
+                        <h5 class="modal-title fs-5" id="exampleModalLabel">John Doe</h5>
+                        <p class="mb-3">A brief description about John Doe. He is a dedicated student with a passion for
+                            software development and teamwork.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </main>
     <!-- Bootstrap JS Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- FontAwesome for icons -->
-
+    <script src="scripts.js"></script>
 </body>
 
 </html>
