--- a/admin-homepage.html
+++ b/admin-homepage.html
@@ -110,7 +110,7 @@
                 <div class="card-container">
                     <!-- User Card -->
                     <div class="card user-card me-3">
-                        <div class="card-header">
+                        <div class="card-header position-sticky top-0">
                             <h3>Moderators</h3>
                         </div>
                         <div class="card-body">
