--- a/admin-homepage.html
+++ b/admin-homepage.html
@@ -6,36 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="admin-homepage.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="admin-homepage.css" rel="stylesheet">
     <title>Admin Homepage</title>
-    <style>
-        .card-container {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-
-        .user-card {
-            max-height: 300px;
-            overflow-y: auto;
-        }
-
-        .user-item {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-        }
-
-        .user-item img {
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            margin-right: 10px;
-        }
-    </style>
 </head>
 
 <body>
@@ -67,7 +40,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="/admin page2.html">
                                 Team schemes
                             </a>
                         </li>
@@ -93,7 +66,7 @@
                             <a class="nav-link text-dark" href="#">Teams</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Team schemes</a>
+                            <a class="nav-link text-dark" href="/admin page2.html">Team schemes</a>
                         </li>
                     </ul>
                 </div>
@@ -101,12 +74,42 @@
             <!-- Main Content -->
             <main class="col-lg-10 ms-sm-auto px-md-4 content">
                 <h1>Admin Dashboard</h1>
-                <div class="d-flex align-items-center mb-4">
-                    <img src="https://via.placeholder.com/100" class="rounded-circle me-3" alt="Profile Picture">
+                <div class="d-flex align-items-center mb-4 position-relative">
+                    <img src="https://via.placeholder.com/100" id="profilePic" class="rounded-circle me-3 img-100"
+                        alt="Profile Picture">
+                    <button class="btn btn-success btn-sm position-absolute" style="transform: translate(260%, -120%);"
+                        data-bs-toggle="modal" data-bs-target="#editProfileModal" aria-label="Edit picture profile">
+                        <i class="bi bi-pencil"></i>
+                    </button>
                     <div>
                         <h2 class="mb-1"><strong>John Doe</strong></h2>
                     </div>
                 </div>
+                <!-- Modal for editing profile picture -->
+                <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="editProfileModalLabel">Edit Profile Picture</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form id="editProfileForm" novalidate>
+                                    <div class="form-group mb-3">
+                                        <label for="newProfileImage">Select New Profile Image</label>
+                                        <input type="file" class="form-control" id="newProfileImage" accept="image/*"
+                                            required>
+                                        <div class="invalid-feedback">Please upload a profile image.</div>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Save changes</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="card-container">
                     <!-- User Card -->
                     <div class="card user-card me-3">
@@ -115,14 +118,14 @@
                         </div>
                         <div class="card-body">
                             <!-- <div class="user-item">
-                                <div class="d-flex align-items-center">
-                                    <img src="https://via.placeholder.com/40" alt="User 1">
-                                    <span>User 1</span>
-                                </div>
-                                <button class="btn btn-danger btn-sm" aria-label="Delete Moderator">
-                                    <i class="bi bi-trash"></i>
-                                </button>
-                            </div> -->
+                            <div class="d-flex align-items-center">
+                                <img src="https://via.placeholder.com/40" alt="User 1">
+                                <span>User 1</span>
+                            </div>
+                            <button class="btn btn-danger btn-sm" aria-label="Delete Moderator">
+                                <i class="bi bi-trash"></i>
+                            </button>
+                        </div> -->
                             <!-- Add more users as needed -->
                         </div>
                     </div>
@@ -157,7 +160,6 @@
                             </form>
                         </div>
                     </div>
-
                 </div>
             </main>
         </div>
