--- a/admin-homepage.html
+++ b/admin-homepage.html
@@ -77,8 +77,8 @@
                 <div class="d-flex align-items-center mb-4 position-relative">
                     <img src="https://via.placeholder.com/100" id="profilePic" class="rounded-circle me-3 img-100"
                         alt="Profile Picture">
-                    <button class="btn btn-success btn-sm position-absolute" style="transform: translate(260%, -120%);"
-                        data-bs-toggle="modal" data-bs-target="#editProfileModal" aria-label="Edit picture profile">
+                    <button class="btn btn-success btn-sm position-absolute" id="editProfilePicture"
+                        data-bs-toggle="modal" data-bs-target="#editProfileModal" aria-label="Edit profile picture ">
                         <i class="bi bi-pencil"></i>
                     </button>
                     <div>
