--- a/student-homepage-team.html
+++ b/student-homepage-team.html
@@ -23,7 +23,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand ms-2" href="#">Team Builder</a>
-            <button class="btn btn-outline-success ms-auto" type="button">Edit Profile</button>
+            <button class="btn btn-outline-success ms-auto" type="button" id="editProfileBtn">Edit Profile</button>
         </div>
     </nav>
     <!-- Sidebar -->
@@ -62,7 +62,7 @@
     <main class="px-md-4 content">
         <div class="d-flex align-items-center mb-4">
             <img src="account_circle.svg" class="rounded-circle me-3" alt="Profile Picture">
-            <div>
+            <div id = "userInfo">
                 <h2 class="mb-1"><strong>John Doe</strong></h2>
                 <p class="mb-1">WhatsApp: +1234567890</p>
                 <p class="mb-1">Major: Computer Science</p>
@@ -139,12 +139,44 @@
             </div>
         </div>
 
+        <!-- Edit Profile Modal -->
+        <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="editProfileModalLabel">Edit Profile</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="editProfileForm">
+                            <div class="mb-3">
+                                <label for="profileName" class="form-label">Name</label>
+                                <input type="text" class="form-control" id="profileName" value="John Doe">
+                            </div>
+                            <div class="mb-3">
+                                <label for="profileWhatsApp" class="form-label">WhatsApp</label>
+                                <input type="text" class="form-control" id="profileWhatsApp" value="+1234567890">
+                            </div>
+                            <div class="mb-3">
+                                <label for="profileMajor" class="form-label">Major</label>
+                                <input type="text" class="form-control" id="profileMajor" value="Computer Science">
+                            </div>
+                            <div class="mb-3">
+                                <label for="profileDescription" class="form-label">Description</label>
+                                <textarea class="form-control" id="profileDescription" rows="3">A brief description about John Doe. He is a dedicated student with a passion for software development and teamwork.</textarea>
+                            </div>
+                            <button type="submit" class="btn btn-success">Save changes</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
     <!-- Bootstrap JS Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- FontAwesome for icons -->
-    <script src="scripts.js"></script>
+    <script src="student-home-team-scripts.js"></script>
 </body>
 
 </html>
