--- a/TeamFormationPage.html
+++ b/TeamFormationPage.html
@@ -32,7 +32,7 @@
         <!-- Page Header --> 
 
 
-            <div class="style_header">
+            <div class="style_Header">
                 
                 <button fdprocessedid="3vosu" class="style_SideBarButton" >
                     <svg viewBox="0 0 448 512" class="style_SideBarIcon" width="14" height="14">
