Adding the complete admin-view-teams page with its styles and functionalities

--- a/admin-homepage.html
+++ b/admin-homepage.html
@@ -30,12 +30,12 @@
                 <div class="position-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">
+                            <a class="nav-link active" href="/admin-homepage.html">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="/admin-view-teams.html">
                                 Teams
                             </a>
                         </li>
@@ -58,12 +58,12 @@
                 <div class="offcanvas-body">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active text-dark" href="#">
+                            <a class="nav-link active text-dark" href="/admin-homepage.html">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Teams</a>
+                            <a class="nav-link text-dark" href="/admin-view-teams.html">Teams</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/admin page2.html">Team schemes</a>
