--- a/admin-view-teams.html
+++ b/admin-view-teams.html
@@ -82,7 +82,7 @@
     </div>
 
     <!-- Toast Notification -->
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
+    <div class="position-fixed bottom-0 end-0 p-3" id="toastConfirmation">
         <div id="deleteToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
                 <strong class="me-auto">Confirm Deletion</strong>
