--- a/admin-homepage.html
+++ b/admin-homepage.html
@@ -20,7 +20,7 @@
                 data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand ms-2" href="#">Admin Homepage</a>
+            <a class="navbar-brand ms-2" href="/admin-homepage.html">Admin Homepage</a>
         </div>
     </nav>
     <div class="container-fluid">
@@ -155,7 +155,7 @@
         </div>
     </div>
     <!-- Toast Notification -->
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
+    <div class="position-fixed bottom-0 end-0 p-3" id="toastConfirmation">
         <div id="deleteToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
                 <strong class="me-auto">Confirm Deletion</strong>
