--- a/student-team-proposals.html
+++ b/student-team-proposals.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="admin-view-teams.css" rel="stylesheet">
-    <title>Admin View Teams</title>
+    <link href="/student-team-proposals.css" rel="stylesheet">
+    <title>Team Proposals</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                 data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand ms-2" href="/admin-view-teams.html">Admin View teams</a>
+            <a class="navbar-brand ms-2" href="/student-team-proposals.html">Team Proposals</a>
         </div>
     </nav>
     <div class="container-fluid">
@@ -30,18 +30,13 @@
                 <div class="position-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin-homepage.html">
+                            <a class="nav-link" href="/student-homepage.html">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/admin-view-teams.html">
-                                Teams
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/admin page2.html">
-                                Team schemes
+                            <a class="nav-link active" href="/student-team-proposals.html">
+                                Team Proposals
                             </a>
                         </li>
                     </ul>
@@ -58,47 +53,19 @@
                 <div class="offcanvas-body">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/admin-homepage.html">
+                            <a class="nav-link text-dark" href="/student-homepage.html">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-dark" href="/admin-view-teams.html">Teams</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/admin page2.html">Team schemes</a>
+                            <a class="nav-link active text-dark" href="/student-team-proposals.html">Team Proposals</a>
                         </li>
                     </ul>
-                </div>
-            </div>
-
-            <!-- Main Content -->
-            <main class="col-lg-10 ms-sm-auto px-md-4 content">
-                <div class="card-container row" id="cardContainer">
-                    <!-- Cards will be dynamically added here -->
-                </div>
-            </main>
-        </div>
-    </div>
-
-    <!-- Toast Notification -->
-    <div class="position-fixed bottom-0 end-0 p-3" id="toastConfirmation">
-        <div id="deleteToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-                <strong class="me-auto">Confirm Deletion</strong>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-            <div class="toast-body">
-                Are you sure you want to delete this team?
-                <div class="mt-2 pt-2 border-top">
-                    <button type="button" class="btn btn-danger btn-sm" id="confirmDeleteBtn">Delete</button>
-                    <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="toast">Cancel</button>
                 </div>
             </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="admin-view-teams.js"></script>
 </body>
 
 </html>
