--- a/student-team-proposals.html
+++ b/student-team-proposals.html
@@ -63,9 +63,30 @@
                     </ul>
                 </div>
             </div>
+
+            <!-- Main Content -->
+            <main class="col-lg-10 ms-sm-auto px-md-4 content">
+                <div class="card-container row" id="cardContainer">
+                    <!-- Cards will be dynamically added here -->
+                </div>
+            </main>
         </div>
     </div>
+    <!-- Toast Notification -->
+    <div class="position-fixed bottom-0 end-0 p-3" id="toastNotification">
+        <div id="requestToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">Notification</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body" id="toastBody">
+                <!-- Toast message will be dynamically updated -->
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="student-team-proposals.js"></script>
 </body>
 
 </html>
