Update student from a team page.html
Fixed issue where the add theme script would not work

--- a/student from a team page.html
+++ b/student from a team page.html
@@ -6,7 +6,7 @@
     <title>student from a team page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id="mainBody">
     
      
     <header class="header">
