Updating navigation links to point to student-team-proposals.html and adjusting "student-team-propoasals.CSS" for layout consistency

--- a/student-homepage.html
+++ b/student-homepage.html
@@ -33,7 +33,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="student-team-proposals.html">
             Team Proposals
           </a>
         </li>
@@ -55,7 +55,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" href="#">Team Proposals</a>
+          <a class="nav-link text-dark" href="student-team-proposals.html">Team Proposals</a>
         </li>
       </ul>
     </div>
