--- a/student-homepage-team.html
+++ b/student-homepage-team.html
@@ -34,7 +34,7 @@
                     <a class="nav-link active" href="#"> Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Team Proposals </a>
+                    <a class="nav-link" href="student-team-proposals.html"> Team Proposals </a>
                 </li>
             </ul>
         </div>
@@ -53,7 +53,7 @@
                     <a class="nav-link active text-dark " href="#"> Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">Team Proposals</a>
+                    <a class="nav-link text-dark" href="student-team-proposals.html">Team Proposals</a>
                 </li>
             </ul>
         </div>
