--- a/student-team-proposals.html
+++ b/student-team-proposals.html
@@ -21,27 +21,26 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand ms-2" href="/student-team-proposals.html">Team Proposals</a>
+            </div>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row">
             <!-- Sidebar -->
-            <nav class="col-lg-2 d-none d-lg-block sidebar">
+            <nav class="sidebar">
                 <div class="position-sticky pt-3">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/student-homepage.html">
-                                Home
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/student-team-proposals.html">
-                                Team Proposals
-                            </a>
-                        </li>
-                    </ul>
+                  <ul class="nav flex-column">
+                    <li class="nav-item">
+                      <a class="nav-link" href="student-homepage.html">
+                        Home
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#">
+                        Team Proposals
+                      </a>
+                    </li>
+                  </ul>
                 </div>
-            </nav>
+              </nav>
             <!-- Offcanvas Sidebar for Small Screens -->
             <div class="offcanvas offcanvas-start  small-sidebar" tabindex="-1" id="offcanvasSidebar"
                 aria-labelledby="offcanvasSidebarLabel">
@@ -65,7 +64,7 @@
             </div>
 
             <!-- Main Content -->
-            <main class="col-lg-10 ms-sm-auto px-md-4 content">
+            <main class="px-md-4 content">
                 <div class="card-container row" id="cardContainer">
                     <!-- Cards will be dynamically added here -->
                 </div>
@@ -82,8 +81,7 @@
             <div class="toast-body" id="toastBody">
                 <!-- Toast message will be dynamically updated -->
             </div>
-        </div>
-    </div>
+       
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="student-team-proposals.js"></script>
