--- a/TeamFormationPage.html
+++ b/TeamFormationPage.html
@@ -42,7 +42,7 @@
                     <text class="text_Title"> Team Formation </text>
                 </div>
                 
-                <button class="style_DefaultButton" fdprocessedid="2u7yz7">Save</button>
+                <button class="style_DefaultButton" fdprocessedid="2u7yz7" onclick="window.location.href='student-homepage.html';">Save</button>
             </div>
             
             <!-- Card featuring input fields --> 
@@ -92,7 +92,7 @@
 
                   </div>
 
-              <button class="style_WideButton" fdprocessedid="kbo5yw">Customize New Scheme</button>
+              <button class="style_WideButton" fdprocessedid="kbo5yw" onclick="window.location.href='student from a team page.html';">Customize New Scheme</button>
 
                 </div>
 
