Enhance student profile page with edit functionality for profile picture and details

--- a/student-homepage-team.html
+++ b/student-homepage-team.html
@@ -63,10 +63,10 @@
         <div class="d-flex align-items-center mb-4">
             <img src="account_circle.svg" class="rounded-circle me-3" alt="Profile Picture">
             <div id="userInfo">
-                <h2 class="mb-1"><strong>John Doe</strong></h2>
+                <h2 class="mb-1"><strong>Ali Ahmed</strong></h2>
                 <p class="mb-1">WhatsApp: +1234567890</p>
                 <p class="mb-1">Major: Computer Science</p>
-                <p class="mb-0">A brief description about John Doe. He is a dedicated student with a passion for
+                <p class="mb-0">A dedicated student with a passion for
                     software development and teamwork.</p>
             </div>
         </div>
@@ -80,8 +80,25 @@
                 <div class="d-flex align-items-center mb-3">
                     <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
                     <div class="details">
-                        <h5 class="mb-1">Jane Doe</h5>
-                        <p class="mb-1">Major: Information Technology</p>
+                        <h5 class="mb-1">Omar Alhamdian</h5>
+                        <p class="mb-1">Major: Computer Science</p>
+                    </div>
+                    <div class="ms-auto d-flex flex-wrap gap-2">
+                        <a href="https://wa.me/+966507113611" target="_blank">
+                            <button class="btn btn-outline-success btn-sm btn-md-normal me-2">
+                                <i class="fab fa-whatsapp"></i>
+                            </button>
+                        </a>
+                        <button class="btn btn-outline-danger btn-sm btn-md-normal delete">
+                            <i class="fas fa-trash"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center mb-3">
+                    <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
+                    <div class="details">
+                        <h5 class="mb-1">Ahmed baik</h5>
+                        <p class="mb-1">Major: Electrical Engineering</p>
                     </div>
                     <div class="ms-auto d-flex flex-wrap gap-2">
                         <a href="https://wa.me/+966507113611" target="_blank">
@@ -103,11 +120,12 @@
             <div class="card-header">
                 <h4>Pending Requests</h4>
             </div>
-            <div class="card-body"> <!-- Pending Request 1 -->
+            <div class="card-body"> 
+                <!-- Pending Request 1 -->
                 <div class="d-flex align-items-center mb-3">
                     <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
                     <div class="details">
-                        <h5 class="mb-1">John Smith</h5>
+                        <h5 class="mb-1">Mohammed Abo-Ras</h5>
                         <p class="mb-1">Major: Electrical Engineering</p>
                     </div>
                     <div class="ms-auto d-flex flex-wrap gap-2">
@@ -123,7 +141,29 @@
                             <i class="fas fa-trash"></i>
                         </button>
                     </div>
-                </div> <!-- Add more pending requests similarly -->
+                </div>
+                <!-- Pending Request 2 -->
+                <div class="d-flex align-items-center mb-3">
+                    <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
+                    <div class="details">
+                        <h5 class="mb-1">Omar Ali</h5>
+                        <p class="mb-1">Major: Accounting</p>
+                    </div>
+                    <div class="ms-auto d-flex flex-wrap gap-2">
+                        <a href="https://wa.me/+966507113611" target="_blank">
+                            <button class="btn btn-outline-success btn-sm btn-md-normal me-md-2">
+                                <i class="fab fa-whatsapp"></i>
+                            </button>
+                        </a>
+                        <button class="btn btn-outline-success btn-sm btn-md-normal me-md-2 accept">
+                            <i class="fas fa-check"></i>
+                        </button>
+                        <button class="btn btn-outline-danger btn-sm btn-md-normal delete">
+                            <i class="fas fa-trash"></i>
+                        </button>
+                    </div>
+                </div> 
+                <!-- Add more pending requests similarly -->
             </div>
         </div> <!-- Delete Team Button -->
         <div class="d-flex justify-content-center">
@@ -140,8 +180,8 @@
                     <div class="modal-body text-center">
                         <img src="person.svg" class="rounded-circle mb-3" alt="Profile Picture">
                         <h5 class="modal-title fs-5" id="exampleModalLabel">John Doe</h5>
-                        <p class="mb-3">A brief description about John Doe. He is a dedicated student with a passion for
-                            software development and teamwork.</p>
+                        <p class="mb-3"> a dedicated student with a passion for
+                            Accountiong and teamwork.</p>
                     </div>
                 </div>
             </div>
@@ -173,7 +213,7 @@
                             <div class="mb-3">
                                 <label for="profileDescription" class="form-label">Description</label>
                                 <textarea class="form-control" id="profileDescription"
-                                    rows="3">A brief description about John Doe. He is a dedicated student with a passion for software development and teamwork.</textarea>
+                                    rows="3">a dedicated student with a passion for software development and teamwork.</textarea>
                             </div>
                             <button type="submit" class="btn btn-success">Save changes</button>
                         </form>
@@ -181,6 +221,7 @@
                 </div>
             </div>
         </div>
+        
 
     </main>
     <!-- Bootstrap JS Bundle (includes Popper) -->
