Fix navbar structure by replacing closing tag for main with closing tag for div

--- a/student-homepage-team.html
+++ b/student-homepage-team.html
@@ -25,7 +25,7 @@
             <a class="navbar-brand ms-2" href="#">Team Builder</a>
             <button class="btn btn-outline-success ms-auto" type="button" id="editProfileBtn">Edit Profile</button>
             </div>
-        </main>
+        </div>
     </nav>
     <!-- Sidebar -->
     <nav class="sidebar">
