update some links

--- a/TeamFormationPage.html
+++ b/TeamFormationPage.html
@@ -42,7 +42,7 @@
                     <text class="text_Title"> Team Formation </text>
                 </div>
                 
-                <button class="style_DefaultButton" fdprocessedid="2u7yz7" onclick="window.location.href='student-homepage.html';">Save</button>
+                <button class="style_DefaultButton" fdprocessedid="2u7yz7" onclick="window.location.href='student-homepage-team.html';">Save</button>
             </div>
             
             <!-- Card featuring input fields --> 
