--- a/student-homepage.html
+++ b/student-homepage.html
@@ -81,7 +81,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-auto">
-          <button class="btn btn-outline-success btn-lg rounded-pill shadow w-100" style="max-width: 40rem; height: 4.5rem; margin-top: 20%; font-size: 1.5rem;">Create a team</button>
+          <button class="btn btn-outline-success btn-lg rounded-pill shadow w-100" style="max-width: 40rem; height: 4.5rem; margin-top: 20%; font-size: 1.5rem;" onclick="window.location.href='TeamFormationPage.html';">Create a team</button>
         </div>
       </div>
     </div>
