Add detailed comments to student homepage HTML file

--- a/student-homepage-team.html
+++ b/student-homepage-team.html
@@ -1,3 +1,30 @@
+<!-- 
+
+This HTML file represents the student homepage for a team-building project. It includes the following sections:
+
+1. Head Section:
+    - Meta charset and title.
+    - Links to Bootstrap CSS, Google Fonts, FontAwesome, and custom CSS.
+
+2. Body Section:
+    - Navbar: Contains a brand name, offcanvas toggle button, and an "Edit Profile" button.
+    - Sidebar: Contains navigation links for "Home" and "Team Proposals".
+    - Offcanvas Sidebar: A collapsible sidebar for small screens with navigation links.
+    - Main Content:
+        - Profile Section: Displays the user's profile picture, name, WhatsApp number, major, and description.
+        - My Team Members Card: Lists the team members with their profile pictures, names, majors, and action buttons (WhatsApp and delete).
+        - Pending Requests Card: Lists pending team member requests with their profile pictures, names, majors, and action buttons (WhatsApp, accept, and delete).
+        - Delete Team Button: A button to delete the entire team.
+        - Info Modal: A modal to display detailed information about a team member.
+        - Edit Profile Modal: A modal to edit the user's profile information.
+        - Edit Profile Picture Modal: A modal to edit the user's profile picture.
+
+3. Scripts:
+    - Bootstrap JS Bundle for Bootstrap functionalities.
+    - Custom JavaScript file for additional functionalities.
+
+Note: The file includes placeholders for images and links to external resources.
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,7 +52,6 @@
             </button>
             <a class="navbar-brand ms-2" href="#">Team Builder</a>
             <button class="btn btn-outline-success ms-auto" type="button" id="editProfileBtn">Edit Profile</button>
-            </div>
         </div>
     </nav>
     <!-- Sidebar -->
