Implement profile editing functionality by extracting and populating current user information in modals

--- a/student-homepage-team.html
+++ b/student-homepage-team.html
@@ -213,7 +213,7 @@ Note: The file includes placeholders for images and links to external resources.
                         <img src="person.svg" class="rounded-circle mb-3" alt="Profile Picture">
                         <h5 class="modal-title fs-5" id="exampleModalLabel">John Doe</h5>
                         <p class="mb-3"> a dedicated student with a passion for
-                            Accountiong and teamwork.</p>
+                            Accounting and teamwork.</p>
                     </div>
                 </div>
             </div>
