Refactor team exit functionality and update UI elements

--- a/student-homepage.html
+++ b/student-homepage.html
@@ -68,7 +68,6 @@
     </div>
   </div>
   <!-- Same sidebar content -->
-  </div>
 
   <!-- Main Content -->
   <main class="px-md-4 content">
@@ -164,7 +163,7 @@
 
       <!-- Delete Team Button -->
       <div class="d-flex justify-content-center">
-        <button class="btn btn-outline-danger" onclick="deleteTeam()">Delete Team</button>
+        <button class="btn btn-outline-danger" id="ExitBtn">Exit Team</button>
       </div>
     </div>
   </main>
