--- a/TeamFormationPage.html
+++ b/TeamFormationPage.html
@@ -109,7 +109,7 @@
 
       schemes=schemesData;
       schemes.forEach((scheme, index) => {
-        creatCard(index,scheme.name);//dc name
+        creatCard(index,scheme.schemeName);//dc name
         majorMap.set(index+'',scheme.majors); //dc majors name
     });
 
