--- a/TeamFormationPage.html
+++ b/TeamFormationPage.html
@@ -53,7 +53,7 @@
               <text class="text_Small">Team Name</text>
               <input id="name" class="style_InputField" placeholder="Enter team name" fdprocessedid="s3vz33">
               <text class="text_Small">Team Description</text>
-              <textarea id="description" class="style_InputBox" style="resize: none;" placeholder="Describe your team" fdprocessedid="jzdeqj">
+              <textarea id="description" class="style_InputBox" style="resize: none;" placeholder="Describe your team" fdprocessedid="jzdeqj"></textarea>
                 </div>
               </div>
 
